[package]
name = "playground"
version = "0.1.0"
authors = ["Geoffroy Couprie <geoffroy.couprie@clever-cloud.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
biscuit-auth = "0.7"
rand = "0.7"
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
base64 = "0.13"

[profile.release]
debug = true
