[package]
name = "playground"
version = "0.1.0"
authors = ["Geoffroy Couprie <geoffroy.couprie@clever-cloud.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#yew = "0.17"
wasm-bindgen = "0.2.67"
#biscuit-auth = "0.7"
biscuit-auth = { path = "../biscuit-rust", features = ["wasm"] }
rand = "0.7"
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
base64 = "0.13"
wee_alloc = "0.4"
nom = "6"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'NodeList',
  'Window',
  'HtmlCollection',
  'HtmlTextAreaElement',
  'HtmlParagraphElement',
  'HtmlInputElement',
]

[profile.release]
codegen-units = 1
opt-level = "z"
